kadai_006を修正、再アップロード

--- a/kadai_006/index_for_student.html
+++ b/kadai_006/index_for_student.html
@@ -57,55 +57,77 @@
         </div>
       </div>
 
-      <!-- お寿司部分開始 -->
 
+
+
+      <!-- お寿司部分開始 -->
       <!-- ここからコードを変更しカードデザインに変更してください -->
       <hr class="featurette-divider">
-      <div class="row">
-        <div class="col-md-3">
-          <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
 
-          <h2 class="fs-3 mt-5">First featurette heading. </h2>
-          <p class="fs-5">It'll blow your mind.</p>
-          <p class="lead fs-6">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+
+
+
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- 左側7/12の部分 -->
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h2 class="fs-3 mt-5">First featurette heading. </h2>
+              <p class="fs-4">It'll blow your mind.</p>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-3">
-          <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
-
-          <h2 class="fs-3 mt-5">First featurette heading. </h2>
-          <p class="fs-5">It'll blow your mind.</p>
-          <p class="lead fs-6">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h2 class="fs-3 mt-5">First featurette heading. </h2>
+              <p class="fs-4">It'll blow your mind.</p>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-3">
-          <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
-
-          <h2 class="fs-3 mt-5">First featurette heading. </h2>
-          <p class="fs-5">It'll blow your mind.</p>
-          <p class="lead fs-6">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h2 class="fs-3 mt-5">First featurette heading. </h2>
+              <p class="fs-4">It'll blow your mind.</p>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-3">
-          <img src="img/sushi.jpg" class="img-fluid" alt="サンプル画像3">
-
-          <h2 class="fs-3 mt-5">First featurette heading. </h2>
-          <p class="fs-5">It'll blow your mind.</p>
-          <p class="lead fs-6">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h2 class="fs-3 mt-5">First featurette heading. </h2>
+              <p class="fs-4">It'll blow your mind.</p>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+            </div>
+          </div>
         </div>
+
+
       </div>
+
 
       <!-- ここまで -->
       <!-- お寿司部分終了 -->
